// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Nexus Client should instantiate with default values 1`] = `
Object {
  "retryStrategy": [Function],
  "scheme": "http://",
}
`;

exports[`Nexus Client should work with override values 1`] = `
Object {
  "apiKey": "some-api-key",
  "retryStrategy": [Function],
  "scheme": "http://",
}
`;
